<resources>
    <string name="app_name">XiYouG</string>
    <string name="library_name">西邮图书馆</string>
    <string name="score_name">西邮成绩</string>
    <string name="schedule_name">西邮课程表</string>
    <string name="classRoom_name">西邮考勤</string>
    <string name="our_name">关于</string>
    <string name="feedback_name">反馈</string>
    <string name="exit">退出登录</string>
    <string name="Main_home">首页</string>
    <string name="Main_my">我的</string>
    <string name="Main_info">消息</string>
    <string name="home_title">西邮控</string>
    <string name="slide_show_one">西安邮电大学</string>
    <string name="slide_show_two">西安邮电大学教务处</string>
    <string name="slide_show_three">西安邮电大学图书馆</string>
    <string name="rank_collection">收藏排行榜</string>
    <string name="rank_borrow">借阅排行榜</string>
    <string name="rank_look">查看排行榜</string>
    <string name="rank_item_leftBrackets">《</string>
    <string name="rank_item_rightBrackets">》</string>
    <string name="info_news">新闻</string>
    <string name="info_notice">公告</string>
    <string name="my_no_login">点击登录</string>
    <string name="my_col">我的收藏</string>
    <string name="my_history">我的足迹</string>
    <string name="my_bor">我的借阅</string>
    <string name="my_debt">欠费情况:</string>

    <string name="book_detail_title">书籍详情</string>
    <string name="book_detail_info">书籍资料</string>
    <string name="book_detail_bor">流通情况</string>
    <string name="login_library_title">西邮图书馆</string>
    <string name="login_account_hint">图书馆账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_btn">登录</string>
    <string name="login_close">关闭</string>
    <string name="login_introduction">点击查看账号说明</string>

    <string name="my_bor_title">我的借阅</string>
    <string name="my_bor_already">已借图书: </string>
    <string name="my_bor_remain">剩余可借: </string>
    <string name="my_bor_continue">续借图书: </string>
    <string name="my_bor_outTime">超期图书: </string>
    <string name="my_bor_item_departmentLabel">分馆:</string>
    <string name="my_bor_item_dateLabel">到期时间:</string>
    <string name="my_bor_item_stateLabel">状态:</string>
    <string name="my_bor_state_type_canBor">我要续借</string>
    <string name="my_bor_state_type_cantBor">已续借</string>

    <string name="my_col_title">我的收藏</string>
    <string name="my_col_item_sortLabel">图书馆索书号</string>

    <string name="my_his_title">我的历史</string>
    <string name="my_his_item_typeLabel">操作类型 :</string>

    <string name="book_detail_page_title">书籍详情</string>
    <string name="book_detail_page_bookInfo">书籍资料</string>
    <string name="book_detail_page_circulation">流通情况</string>
    <string name="book_detail_page_referBooks">相关推荐</string>
    <string name="book_detail_page_titleLabel">书名:</string>
    <string name="book_detail_page_authorLabel">作者:</string>
    <string name="book_detail_page_pubLabel">出版社:</string>
    <string name="book_detail_page_sortLabel">索书号:</string>
    <string name="book_detail_page_pagesLabel">页数:</string>
    <string name="book_detail_page_availableLabel">可借数量:</string>
    <string name="book_detail_page_totalLabel1">共有图书</string>
    <string name="book_detail_page_rentTimesLabel">借阅次数:</string>
    <string name="book_detail_page_favTimesLabel">收藏次数:</string>
    <string name="book_detail_page_totalLabel">藏书数量:</string>
    <string name="book_detail_page_subjectLabel">主题分类:</string>
    <string name="book_detail_page_summaryLabel">图书简介:</string>
    
    <string name="book_detail_class_title1">基本资料</string>
    <string name="book_detail_class_title2">流通情况</string>
    <string name="book_detail_class_title3">相关推荐</string>

    <string name="book_search_title">图书检索</string>
    <string name="book_search_hint_word">请输入书名</string>


    <string name="book_circul_sortLabel">位置:</string>
    <string name="book_circul_barLabel">条形码:</string>

    <string name="book_refer_authorLabel">作者:</string>
    <string name="book_refer_idLabel">控制号:</string>
    
    <string name="schedule_day1">星期一</string>
    <string name="schedule_day2">星期二</string>
    <string name="schedule_day3">星期三</string>
    <string name="schedule_day4">星期四</string>
    <string name="schedule_day5">星期五</string>
    <string name="schedule_time1">8.00</string>
    <string name="schedule_time2">8.55</string>
    <string name="schedule_time3">10.15</string>
    <string name="schedule_time4">11.10</string>
    <string name="schedule_time5">2.30</string>
    <string name="schedule_time6">3.25</string>
    <string name="schedule_time7">4.35</string>
    <string name="schedule_time8">5.30</string>
    <string name="schedule_login">导入课表</string>
    <string name="schedule_update">更新课表</string>
    <string name="schedule_import">点击右下角绿色按钮导入课表</string>

    <string name="schedule_login_account_hint">教务处账号</string>
    <string name="schedule_login_password_hint">密码</string>
    <string name="schedule_login_valiCode_hint">验证码</string>
    <string name="schedule_login_btn">登录</string>
    <string name="schedule_login_close">关闭</string>
    <string name="schedule_login_remember">记住密码</string>
    <string name="schedule_bottom_left">课表</string>
    <string name="schedule_bottom_right">我的</string>

    <string name="schedule_my_no_login">点击登录</string>
    <string name="schedule_my_import">导入成绩</string>
    <string name="schedule_my_exit">退出登录</string>

    <string name="score_login_btn">登录</string>
    <string name="score_bottom_left">成绩</string>
    <string name="score_bottom_right">我的</string>
    <string name="score_title">我的成绩</string>
    <string name="score_item_score">成绩:</string>
    <string name="score_item_credit">学分:</string>
    <string name="score_item_courseNature">课程性质:</string>
    <string name="score_not_pass">未通过的成绩</string>
    <string name="score_item_failed_score">最高成绩:</string>

    <string name="about_our_app_name">西邮控</string>
    <string name="about_our_version_label">当前版本号:</string>
    <string name="about_our_version">2.0</string>
    <string name="about_our_update">版本更新</string>
    <string name="about_our_question">常见问题</string>
    <string name="about_our_feedback">问题反馈</string>
    <string name="about_our_our">关于我们</string>
    <string name="about_our_team">应用开发:西邮移动应用开发实验室</string>
    <string name="about_our_me">联系:wangyongzhi@xiyou3g.com</string>

    <string name="question_title">问题帮助</string>
    <string name="question_item1">
        1.登录时的学号和密码都指的是什么？
        \n\tA.图书馆账号和密码一般为:
        \n\t\ta.15级及以后学生账号为自己的学号，初始密码为学号后6位或123456;
        \n\t\tb.15级以前学生账号为：大写S+自己的学号，初始密码为123456;
        \n\tB.课表和成绩的账号和密码为自己的教务处账号和密码</string>
   <string name="question_item2">
      3.点击侧滑栏的头像可以设置自己喜欢的头像哦</string>
      <string name="question_item8">
      2.通过左边的侧滑栏可以选择图书馆，成绩，课表等界面</string>
    <string name="question_item3">
        4.如何使用课表功能？
        \n\ta.导入课表:
        \n\t\t点击课表右下角绿色按钮即可导入课表,课表一经导入即会一直存在。
        \n\tb.更新课表:
        \n\t\t更新课表，只需重新按绿色按钮导入即可更新</string>
     <string name="question_item4">
        5.为什么要反复登陆？
        \n\ta.图书馆账号和课表，成绩账号不同;
        \n\tb.课表导入后会一直存在,就算程序退出后,下次打开程序不需登陆即可看课表,一学期只需导入一次，十分方便
    </string>
       <string name="question_item5">
        6.点击头像的拍照和图书查询的扫一扫程序会崩？
        \n\ta.该两项功能需要相机权限,可能没有权限，我们需要在设置里面对该应用允许相机权限即可
    </string>
     <string name="question_item6">
        7.该应用的主界面是哪个？
        \n\ta.该应用每次显示的首界面是图书馆界面，通过侧滑栏的选项切换应用。
    </string>
      <string name="question_item7">
        8.为什么自己的课表有多个版本？
        \n\ta.课表是从教务处实时获取的，所以如果自己的课表发生变化，请在教务处查看，如果app上最新的课表和教务处一致说明程序正确。
    </string>
    <string name="setLogo_takePhoto">拍照</string>
    <string name="setLogo_album">相册</string>
    <string name="setLogo_cancel">取消</string>


    <string name="fourLevel_title">四六级成绩</string>
    <string name="fourLevel_label">全国大学英语四、六级考试成绩查询结果</string>
    <string name="fourLevel_nameLabel">姓名 </string>
    <string name="fourLevel_schoolLabel">学校 </string>
    <string name="fourLevel_typeLabel">考试类别 </string>
    <string name="fourLevel_accountLabel">准考证号 </string>
    <string name="fourLevel_timeLabel">考试时间 </string>
    <string name="fourLevel_totalLabel">总分 </string>
    <string name="fourLevel_listenLabel">听力 </string>
    <string name="fourLevel_readLabel">阅读 </string>
    <string name="fourLevel_writeLabel">写作与翻译 </string>
    <string name="fourLevel_account_hint">请输入15位准考证号</string>
    <string name="fourLevel_password_hint">姓名超过3个字，可只输入前3个</string>
    <string name="fourLevel_divide_word">:</string>

    <string name="workCheck_word">首页正下方可查找空闲教室,右上方登录可查询考勤情况</string>

</resources>
