<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:background="@color/my_background"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:gravity="center"
            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/applogo"
                />
            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_our_app_name"
                />
            <LinearLayout
                android:layout_marginTop="1dp"
                android:layout_below="@id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_our_version_label"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_our_version"
                    />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_col_divide"
            android:background="@color/my_col_divide"
            />
        <LinearLayout
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_our_update"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_col_divide"
            android:background="@color/my_col_divide"
            />
        <LinearLayout
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_our_question"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_col_divide"
            android:background="@color/my_col_divide"
            />
        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_our_feedback"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_col_divide"
            android:background="@color/my_col_divide"
            />
        <LinearLayout
            android:id="@+id/our"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_our_our"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_col_divide"
            android:background="@color/my_col_divide"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:background="@color/my_background"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/logo"
            />
        <TextView
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_our_team"
            />
        <TextView
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_our_me"
            />
        <WebView
            android:id="@+id/our_webView"
            android:background="@color/my_background"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>
