<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/my_bor_title_back"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/question_title"
            android:text="@string/question_title"
            android:textSize="@dimen/question_title"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/question_back"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/question_item_shape"
            >
            <TextView
                android:padding="10dp"
                android:text="@string/question_item1"
                android:layout_width="match_parent"
                android:textSize="@dimen/question_item1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/question_item_shape"
        >
        <TextView
            android:padding="10dp"
            android:text="@string/question_item2"
            android:layout_width="match_parent"
            android:textSize="@dimen/question_item1"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/question_item_shape"
            >
            <TextView
                android:padding="10dp"
                android:text="@string/question_item3"
                android:layout_width="match_parent"
                android:textSize="@dimen/question_item1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/question_item_shape"
            >
            <TextView
                android:padding="10dp"
                android:text="@string/question_item4"
                android:layout_width="match_parent"
                android:textSize="@dimen/question_item1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>