<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="181dp"
    >
    <TextView
        android:background="@drawable/setlogo_up_shape"
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:textSize="@dimen/setLogo_word"
        android:textColor="@color/setLogo_word"
        android:layout_height="50dp"
        android:text="@string/setLogo_takePhoto"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/setLogo_divide"
        />
    <TextView
        android:id="@+id/album"
        android:background="@drawable/setlogo_down_shape"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/setLogo_album"
        android:textSize="@dimen/setLogo_word"
        android:textColor="@color/setLogo_word"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#00ffffff"
        />
    <TextView
        android:id="@+id/cancel"
        android:background="@drawable/setlogo_shape"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="@dimen/setLogo_word"
        android:textColor="@color/setLogo_word"
        android:text="@string/setLogo_cancel"
        android:gravity="center"
        />
</LinearLayout>