<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/my_bor_title_back"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/fourLevel_title"
            android:text="@string/fourLevel_title"
            android:textSize="@dimen/fourLevel_title"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_below="@id/toolbar"
        android:visibility="visible"
        android:id="@+id/login_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:singleLine="false"
            />
        <EditText
            android:id="@+id/login_account"
            android:textSize="@dimen/login_account"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/fourLevel_account_hint"
            android:background="@drawable/login_account_shape"
            android:layout_width="match_parent"
            android:textColorHint="@color/login_account_hint"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textColor="@color/login_account"
            />
        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:textSize="@dimen/login_password"
            android:hint="@string/fourLevel_password_hint"
            android:textColorHint="@color/login_account_hint"
            android:background="@drawable/login_account_shape"
            android:padding="10dp"
            android:textColor="@color/login_account"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_btn_shape"
            android:text="@string/login_btn"
            android:textSize="@dimen/login_btn"
            android:textColor="@color/login_btn_word"
            android:layout_margin="20dp"
            />



    </LinearLayout>
    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/main_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourLevel_label"
            android:textSize="@dimen/fourLevel_label"
            android:textColor="@color/fourLevel_label"

            />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fourLevel_nameLabel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:text="@string/fourLevel_divide_word"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fourLevel_schoolLabel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:text="@string/fourLevel_divide_word"/>
            <TextView
                android:id="@+id/school"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fourLevel_typeLabel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:text="@string/fourLevel_divide_word"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fourLevel_accountLabel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:text="@string/fourLevel_divide_word"/>
            <TextView
                android:id="@+id/account"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fourLevel_timeLabel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:text="@string/fourLevel_divide_word"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fourLevel_totalLabel"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:text="@string/fourLevel_divide_word"/>
            <TextView
                android:id="@+id/total_grade"
                android:textColor="#f00"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/listen_grade"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/read_grade"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/write_grade"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/loading"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        layout="@layout/loading"/>
</RelativeLayout>