<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_theme"
        >
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="西邮图书馆"
            android:textSize="@dimen/login_title"
            android:textColor="@color/login_title"
            />
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/account"
        android:textSize="@dimen/login_account"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/login_account_hint"
        android:background="@drawable/login_account_shape"
        android:layout_width="match_parent"
        android:textColorHint="@color/login_account_hint"
        android:layout_height="50dp"
        android:padding="10dp"
        android:textColor="@color/login_account"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textSize="@dimen/login_password"
        android:hint="@string/login_password_hint"
        android:textColorHint="@color/login_account_hint"
        android:background="@drawable/login_account_shape"
        android:padding="10dp"
        android:textColor="@color/login_account"
        />
    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="记住密码"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_btn_shape"
        android:text="@string/login_btn"
        android:textSize="@dimen/login_btn"
        android:textColor="@color/login_btn_word"
        android:layout_margin="20dp"
        />



</LinearLayout>